fix macos build

note that this is not a security fix, but recognized as critical build problem.
[Backport #17777]


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_2_6@67942 b2dd03c8-39d4-4d8f-98ff-823fe69b080e